--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,9 +20,11 @@ stages:          # List of stages for jobs, and their order of execution
 
 build-job:       # This job runs in the build stage, which runs first.
   stage: build
+  image: maven:latest
   script:
     - echo "Compiling the code..."
-    - "mvn install"
+    - "mvn compile"
+    - "mvn package"
     - echo "Compile complete."
 
 # unit-test-job:   # This job runs in the test stage.
