--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,8 +23,8 @@ build-job:       # This job runs in the build stage, which runs first.
   image: maven:latest
   script:
     - echo "Compiling the code..."
-    - "mvn compile"
-    - "mvn package"
+    - "mvn -B compile"
+    - "mvn -B package"
     - echo "Compile complete."
   artifacts:
     paths:
