--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+#JWT Token info
+app.jwt.secret=aejhacpihazpiuuhviabzpab
+app.jwt.issuer=Volkramer
